--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,7 +1,34 @@
 nav li {
     list-style: none;
+    width: 80%;
+    height: 50px;
+    width: 150px;
+    border-radius: 10px;
+    background-color: rgb(203, 144, 238);
+    padding: 15px 15px;
+
 }
 
 nav li a {
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
+
+#match {
+    background-color: rgb(79, 255, 79);
+    border: 2px solid black;
+}
+
+.side-nav {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+    margin-top: 30px;
+}
+
+;
