--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,9 @@
         --------------------------------------- */
 .base-background {
     height: 100vh;
+    width: 100vw;
     display: flex;
+
     justify-content: center;
     align-items: center;
 
@@ -72,31 +74,45 @@
                Aside-Nav and Body Section 
                --------------------------------------*/
 
-.nav-go-live {
+.second-base-bg {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 
+
+
+
 }
 
-.side-nav,
-.go-live {
-    float: left;
+.nav-go-live {
+    height: 88vh;
+    width: 85%;
+    background-color: rgb(212, 223, 212);
+    border-radius: 30px;
+    display: flex;
+
 }
+
+
+
+/* aside .go-live {
+    float: left;
+} */
 
 aside {
     background-color: lightgreen;
-    width: 200px;
-    height: 500px;
+    width: 20%;
+    height: 100%;
 }
 
 .go-live {
     background-color: rgb(32, 146, 32);
-    width: calc(100% -200px);
-    height: 500px;
-}
+    width: 80%;
+    height: 100%;
 
+    /* flex-grow: 1; */
+}
 
 
 /*----------------------- Footer ---------------------*/
@@ -126,7 +142,10 @@ hr {
     margin-bottom: 20px;
 }
 
-.social-media {}
+.social-media {
+    display: flex;
+    gap: 20px;
+}
 
 .contact-misc {
     display: flex;
