--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
 
 * {
     box-sizing: border-box;
@@ -27,6 +31,7 @@
     display: flex;
 
 
+
 }
 
 .banner-text {
@@ -41,17 +46,16 @@
 }
 
 .heading-style {
-    font-family: 'Poppins', sans-serif;
-    font-size: 70px;
+
+    font-size: 60px;
     font-weight: 900;
 }
 
 .para-style {
-    font-family: 'Poppins', sans-serif;
     color: darkslategrey;
     font-size: 20px;
     font-weight: 400;
-    margin-bottom: 26px;
+    margin-bottom: 22px;
 }
 
 .banner-button {
@@ -62,7 +66,7 @@
 }
 
 .hosting-country {
-    font-family: 'Poppins', sans-serif;
+
     color: green;
     font-size: 73px;
 }
@@ -76,6 +80,7 @@
 
 .second-base-bg {
     height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,11 +91,12 @@
 }
 
 .nav-go-live {
-    height: 88vh;
-    width: 85%;
-    background-color: rgb(212, 223, 212);
+    height: 98vh;
+    width: 98%;
+    /* background-color: rgb(212, 223, 212); */
     border-radius: 30px;
     display: flex;
+
 
 }
 
@@ -102,18 +108,41 @@
 
 aside {
     background-color: lightgreen;
-    width: 20%;
-    height: 100%;
+    width: 16%;
+    height: 40%;
+    border-radius: 20px;
 }
 
 .go-live {
-    background-color: rgb(32, 146, 32);
-    width: 80%;
+    /* background-color: rgb(32, 146, 32); */
+    width: 84%;
     height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 8px;
+    margin-left: 8px;
 
     /* flex-grow: 1; */
 }
 
+
+.live-info {
+    display: flex;
+    /* justify-content: space-between; */
+    color: rgb(58, 68, 78);
+}
+
+/* .go-live-container {
+    width: 31%;
+    height: 47%;
+} */
+
+
+/* .go-live-banner {
+    width: 220px;
+    height: 100px;
+
+} */
 
 /*----------------------- Footer ---------------------*/
 footer {
