--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,7 +5,6 @@ nav li {
     width: 150px;
     border: 1px solid black;
     border-radius: 10px;
-
     padding: 15px 15px;
 
 
@@ -20,7 +19,7 @@ nav li a {
 
 }
 
-#match {
+#blog {
     background-color: rgb(79, 255, 79);
     border: 2px solid black;
 
@@ -33,5 +32,44 @@ nav li a {
     align-items: center;
     row-gap: 30px;
     margin-top: 30px;
+
+}
+
+/*----------------- For Mobile phone------------------ */
+@media only screen and (max-width:577px) {
+    .side-nav {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+
+
+    }
+
+
+}
+
+
+/* ------------------For tablet devices --------------*/
+@media only screen and (min-width:577px) and (max-width:992px) {
+    .side-nav {
+        flex-direction: row;
+        column-gap: 100px;
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
+
+    nav li {
+        background-color: lightgreen;
+        height: 100px;
+        width: 200px;
+        border: 1px solid green;
+
+    }
+
+    ul #blog {
+        height: 100px;
+        width: 200px;
+    }
+
 
 }
