--- a/styles/nav.css
+++ b/styles/nav.css
@@ -6,6 +6,8 @@ nav li {
     border: 1px solid black;
     border-radius: 10px;
     padding: 15px 15px;
+    color: black;
+    font-weight: 600;
 
 
 }
