--- a/styles/nav.css
+++ b/styles/nav.css
@@ -27,6 +27,11 @@ nav li a {
 
 }
 
+#match {
+    background-color: rgb(79, 255, 79);
+    border: 2px solid black;
+}
+
 .side-nav {
     display: flex;
     flex-direction: column;
